Dark mode bug fixes

--- a/css/mode-switch.css
+++ b/css/mode-switch.css
@@ -1,16 +1,13 @@
 .main-colour {
-    --mc: #000;
     color: #000;
 }
 
 .sub-colour {
-    --sc: #888;
     color: #888;
 }
 
 
 .dark-main-colour  {
-    --mc: #fff;
     color: #fff;
 }
 
@@ -20,7 +17,6 @@ img.dark-main-colour  {
 }
 
 .dark-sub-colour {
-    --sc: #aaa;
     color: #aaa;
 }
 
@@ -32,9 +28,20 @@ img.dark-main-colour  {
     animation:blinkingText 2.0s infinite;
 }
 @keyframes blinkingText{
-    0%{color: var(--mc);}
+    0%{color: #000;}
     49%{color: transparent;}
     50%{color: transparent;}
     69%{color: transparent;}
-    100%{color: var(--mc);}
+    100%{color: #000;}
+}
+
+.blinking-dark{
+    animation:blinkingTextDark 2.0s infinite;
+}
+@keyframes blinkingTextDark{
+    0%{color: #fff;}
+    49%{color: transparent;}
+    50%{color: transparent;}
+    69%{color: transparent;}
+    100%{color: #fff;}
 }
